# normalizer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
src/normalizer/: cli.py  main.py  normalizer.py  streamlit.py
