[project]
name = "lufs-normalizer"
version = "0.1.0"
description = "lufs audio normalizer"
authors = [
    {name = "Yu SERIZAWA", email = "upamune@gmail.com"},
]
dependencies = [
    "pyloudnorm>=0.1.1",
    "fire>=0.5.0",
    "soundfile>=0.12.1",
    "streamlit>=1.29.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project.scripts]
lufs-normalizer = "normalizer.cli:main"

[tool.pdm]
package-type = "application"

[tool.pdm.scripts]
cli.cmd = "python src/normalizer/cli.py"
web.cmd = "streamlit run src/normalizer/streamlit.py"
export.cmd = "pdm export -o requirements.txt --without-hashes"
